Added diplomatic reprecissions for demands that the other civs is unwilling to fulfil Removed WeAgreedNotToSettleNearThem flag - was reverse copy of AgreedNotToSettleNearUs

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -386,6 +386,8 @@
 		Italian:"Abbiamo notato la la tua nuova città vicino ai nostri confini. E questo avrà... ripercussioni sui nostri rapporti."
 	}
 	
+	"Your arrogant demands are in bad taste":{}
+	
 	
 ////// City-States Types
 
