--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -386,7 +386,9 @@
 		Italian:"Abbiamo notato la la tua nuova città vicino ai nostri confini. E questo avrà... ripercussioni sui nostri rapporti."
 	}
 	
-	"Your arrogant demands are in bad taste":{}
+	"Your arrogant demands are in bad taste":{
+		Italian:"Hai fatto una richiesta arrogante."
+	}
 	
 	
 ////// City-States Types
