--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -579,6 +579,10 @@
 		German:"Pikenier"
 	}
 
+	"Landsknecht":{
+		Italian:"Lanzichenecco"
+	}
+
 	"Knight":{	
 		Italian:"Cavaliere"
 		Russian:"Рыцарь"
