Resolved #899 - Added setting to disable city auto-picking construction

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -846,7 +846,7 @@
 	}
 
 	"Augustus Caesar":{
-		Italian:"Cesare Augusto"Harun al-Rashid
+		Italian:"Cesare Augusto"
 	}
 
 	"+25% Production towards any buildings that already exist in the Capital":{
