typo fix in Notifications

--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -199,7 +199,7 @@
             Dutch:"We hebben de stad [cityname] ingenomen!"
             Spanish:"¡Hemos conquistado la ciudad de [cityname]!"
             Simplified_Chinese:"我们已经占领城市[cityname]"
-            Portuguese:"Consquistamos a cidade de [cityName]!"
+            Portuguese:"Consquistamos a cidade de [cityname]!"
             Japanese:"[cityname]の街を征服しました！"
         }
         
